<resources>
    <string name="app_name">Tes Psikologi</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_onboarding_1">dari 36</string>
    <string name="description_onboarding_1">Tes Psikologi</string>

    <string name="title_onboarding_2">Online Test</string>
    <string name="description_onboarding_2">You can assess your skills with the available tests</string>

    <string name="title_onboarding_3">Digital Class</string>
    <string name="description_onboarding_3">a place that can bring together teachers and students to become one to communicate with each other in carrying out learning</string>

    <string name="soal">Saya suka mendengarkan daripada membaca buku</string>
    <string name="pilihan2">Sesuai</string>
    <string name="pilihan1">Sangat Sesuai</string>
    <string name="pilihan3">Kurang Sesuai</string>
    <string name="pilihan4">Tidak Sesuai</string>

    <string name="nilai">NILAI</string>
    <string name="move">Move</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="home">HOME</string>
    <string name="mulai">Mulai</string>
    <string name="img_hasil">img hasil</string>
    <string name="kelompok">kelompok</string>
    <string name="Terimakasih">Terima kasih telah menyelesaikan tes psikologi dan kamu termasuk kelompok belajar </string>
    <string name="ulangi_tes">ULANGI TES</string>
    <string name="nama">Nama</string>
    <string name="gaya">Cara belajar yang tepat untuk anda adalah </string>

    <string name="audiotori">AUDIOTORI</string>
    <string name="visual">VISUAL</string>
    <string name="kinestetik">KINESTETIK</string>

    <string name="des_A">Gaya belajar auditori mengandalkan pendengaran untuk bisa memahami dan mengingat. Karakteristik model belajar seperti ini benar-benar menempatkan pendengaran sebagai alat utama menyerap informasi atau pengetahuan</string>
    <string name="des_V">Gaya belajar visual menitikberatkan pada ketajaman penglihatan. Artinya, individu harus diperlihatkan terlebih dahulu agar benar-benar paham. Gaya belajar ini mengandalkan penglihatan atau melihat terlebih dahulu buktinya untuk kemudian bisa mempelajarinya</string>
    <string name="des_K">Gaya belajar kinestetik mengaruskan individu yang bersangkutan menyentuh sesuatu yang memberikan informasi atau mempraktikan yang dipelajari agar bisa mengingatnya.</string>
</resources>