<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="move"
            type="com.example.tespsikologi.fragments.FragmentEnd" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.FragmentEnd">

        <TextView
            android:id="@+id/tv_selamat"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_above="@id/img_result"
            android:fontFamily="@font/montserrat"
            android:gravity="center"
            android:text="@string/Terimakasih"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_result"
            android:layout_width="300dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:src="@drawable/img_resultt"
            android:contentDescription="@string/img_hasil" />

        <TextView
            android:id="@+id/tv_kelompok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_result"
            android:fontFamily="@font/montserrat_bold"
            android:gravity="center"
            android:text="@string/kelompok"
            android:textSize="40dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_kelompok"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ulangi"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/custom_btn"
                android:hint="@string/ulangi_tes"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/btn_home"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:background="@drawable/custom_btn"
                android:hint="@string/home"
                android:textColorHint="@color/white" />
        </LinearLayout>
    </RelativeLayout>
</layout>
